Implement WhatsApp bot flows and dashboard

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,23 +1,5 @@
-# Configuração do Banco de Dados
-DATABASE_URL="file:../../data/gestao-contabil.db"
-
-# Configuração do Servidor
-PORT=3000
-NODE_ENV=development
-
-# Configuração de Segurança
-JWT_SECRET=sua_chave_secreta_aqui_mude_em_producao
-SESSION_SECRET=outra_chave_secreta_aqui
-
-# Configuração de Notificações
-ENABLE_NOTIFICATIONS=true
-NOTIFICATION_DAYS_BEFORE=7,3,1
-
-# Configuração de Backup
-AUTO_BACKUP=true
-BACKUP_INTERVAL_HOURS=24
-BACKUP_PATH=../../data/backups
-
-# Configuração de Logs
-LOG_LEVEL=info
-LOG_FILE=../../data/logs/app.log
+WHATSAPP_TOKEN=
+PHONE_NUMBER_ID=
+WABA_ID=
+VERIFY_TOKEN=
+APP_BASE_URL=http://localhost:3000
