--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,9 @@
     "ts-node-dev": "^2.0.0",
     "prisma": "^5.7.1",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.11"
+    "@types/jest": "^29.5.11",
+    "@types/supertest": "^2.0.16",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   }
 }
